Add NumberChooserView. - Added Google Truth and AndroidX Rules libs. - Added BlankActivity (TODO: Move into androidTest source root, or remove later).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        <activity android:name=".BlankActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                 <action android:name="com.package.name.MyAction" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
