--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'com.google.truth:truth:' + truthVersion
+    testImplementation 'android.arch.core:core-testing:1.1.1'
 
     androidTestImplementation 'com.google.truth:truth:' + truthVersion
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
